[gd_scene load_steps=16 format=3 uid="uid://dljc6sorr46hk"]

[ext_resource type="PackedScene" uid="uid://bs72ogkvdd7d6" path="res://addons/proto_controller/proto_controller.tscn" id="1_lhppi"]
[ext_resource type="Script" uid="uid://bbhevr7asph16" path="res://main_game_scene.gd" id="1_rlhik"]
[ext_resource type="PackedScene" uid="uid://b7y70rx5yanva" path="res://game/npcs/BoxOffice/box_office.tscn" id="2_ccfle"]
[ext_resource type="PackedScene" uid="uid://dgjwd23d4dlkd" path="res://Clive.tscn" id="2_rlhik"]
[ext_resource type="PackedScene" uid="uid://chg7ovr6efbxd" path="res://game/npcs/DoubleDoors/double_doors.tscn" id="3_4gwvo"]
[ext_resource type="PackedScene" uid="uid://bqrn845jew2m2" path="res://game/npcs/asked_question.tscn" id="3_holyq"]
[ext_resource type="Script" uid="uid://blrs3t0ggqj3m" path="res://game/ui/dialog.gd" id="4_ccfle"]
[ext_resource type="Theme" uid="uid://kafrwpif8e5j" path="res://game/DefaultTheme.tres" id="5_4gwvo"]
[ext_resource type="PackedScene" uid="uid://cq8xyo3uhxl6j" path="res://game/music/musical_music.tscn" id="7_holyq"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_25807"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_dbkhw"]
sky_material = SubResource("ProceduralSkyMaterial_25807")

[sub_resource type="Environment" id="Environment_y61ny"]
background_mode = 2
sky = SubResource("Sky_dbkhw")
tonemap_mode = 2

[sub_resource type="NavigationMesh" id="NavigationMesh_holyq"]
vertices = PackedVector3Array(-12, 7, -0.5, -12, 7, -4.76837e-07, 18.5, 7, -4.76837e-07, 18.5, 7, -0.5, 11, 1, 6.75, 11.75, 1, 6.5, 11.75, 1, 5.25, 11, 1, 5, 8.5, 1, 9.25, 11, 1, 9, -10.75, 1, 17.5, 8.5, 1, 13, 11, 1, 17.5, 11, 1, 13.25, 11, 1, 0.75, -10.75, 1, 0.75, 13.25, 1, 0.75, 13.25, 1, 18, 17.5, 1, 18, 17.5, 1, 0.75, 9.5, 5, 10, 9.5, 5, 12, 11, 5, 12, 11, 5, 10, 9.75, 1, 10.25, 9.75, 1, 12, 11, 1, 12, 11, 1, 10.25, -12, 1, 19.75, -12, 1, 55.5, 18.5, 1, 55.5, 18.5, 1, 19.75)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1), PackedInt32Array(6, 5, 4), PackedInt32Array(6, 4, 7), PackedInt32Array(7, 4, 8), PackedInt32Array(4, 9, 8), PackedInt32Array(8, 11, 10), PackedInt32Array(13, 12, 11), PackedInt32Array(11, 12, 10), PackedInt32Array(7, 8, 14), PackedInt32Array(14, 8, 15), PackedInt32Array(15, 8, 10), PackedInt32Array(19, 18, 16), PackedInt32Array(16, 18, 17), PackedInt32Array(23, 22, 20), PackedInt32Array(20, 22, 21), PackedInt32Array(27, 26, 24), PackedInt32Array(24, 26, 25), PackedInt32Array(31, 30, 28), PackedInt32Array(28, 30, 29)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_holyq"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_fgfqk"]
default_font_size = 32

[node name="Main" type="Node3D"]
script = ExtResource("1_rlhik")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_y61ny")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 4.6, 8)
shadow_enabled = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
unique_name_in_owner = true
navigation_mesh = SubResource("NavigationMesh_holyq")

[node name="LevelGeometry" type="CSGCombiner3D" parent="NavigationRegion3D"]
use_collision = true

[node name="Floor" type="CSGBox3D" parent="NavigationRegion3D/LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.25, 0, 27.5)
use_collision = true
size = Vector3(31.5, 1, 57)
material = SubResource("StandardMaterial3D_holyq")

[node name="Walls" type="CSGCombiner3D" parent="NavigationRegion3D/LevelGeometry"]

[node name="FoyerWalls" type="CSGCombiner3D" parent="NavigationRegion3D/LevelGeometry/Walls"]

[node name="FoyerEast" type="CSGBox3D" parent="NavigationRegion3D/LevelGeometry/Walls/FoyerWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 3.5, 9)
size = Vector3(1, 6, 20)

[node name="FoyerSouth" type="CSGBox3D" parent="NavigationRegion3D/LevelGeometry/Walls/FoyerWalls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.75, 3.5, -0.5)
size = Vector3(1, 6, 30.5)

[node name="FoyerNorth" type="CSGBox3D" parent="NavigationRegion3D/LevelGeometry/Walls/FoyerWalls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5.96048e-08, 3.5, 18.5)
size = Vector3(1, 6, 23)

[node name="FoyerEast1" type="CSGBox3D" parent="NavigationRegion3D/LevelGeometry/Walls/FoyerWalls"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 12, 3.5, 13.0761)
size = Vector3(1, 6, 11.8478)

[node name="FoyerEast2" type="CSGBox3D" parent="NavigationRegion3D/LevelGeometry/Walls/FoyerWalls"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 12, 3.5, 1.78284)
size = Vector3(1, 6, 5.56567)

[node name="Hallway" type="CSGCombiner3D" parent="NavigationRegion3D/LevelGeometry/Walls"]

[node name="HallwayEast" type="CSGBox3D" parent="NavigationRegion3D/LevelGeometry/Walls/Hallway"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 18.5, 3.5, 9)
size = Vector3(1, 6, 20)

[node name="HallwayNorth2" type="CSGCombiner3D" parent="NavigationRegion3D/LevelGeometry/Walls/Hallway"]

[node name="HallwayNorth" type="CSGBox3D" parent="NavigationRegion3D/LevelGeometry/Walls/Hallway/HallwayNorth2"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 15.25, 3.5, 18.75)
size = Vector3(0.5, 6, 5.5)

[node name="HallwayNorth2" type="CSGBox3D" parent="NavigationRegion3D/LevelGeometry/Walls/Hallway/HallwayNorth2"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 15.3369, 2, 18.75)
operation = 2
size = Vector3(0.5, 3, 2.32629)

[node name="Scenary" type="CSGCombiner3D" parent="NavigationRegion3D/LevelGeometry"]

[node name="BoxOffice" parent="NavigationRegion3D/LevelGeometry/Scenary" instance=ExtResource("2_ccfle")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 11)

[node name="FoyerDoubleDoors" parent="NavigationRegion3D/LevelGeometry/Scenary" instance=ExtResource("3_4gwvo")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 12.5, 0.5, 6.15)

[node name="HallwayDoubleDoors" parent="NavigationRegion3D/LevelGeometry/Scenary" instance=ExtResource("3_4gwvo")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 15.0839, 0.5, 18.8763)

[node name="Player" parent="." instance=ExtResource("1_lhppi")]
transform = Transform3D(-1, 0, 2.38419e-07, 0, 1, 0, -2.38419e-07, 0, -1, 0, 0, 1)
input_left = "move_left"
input_right = "move_right"
input_forward = "move_up"
input_back = "move_down"

[node name="Clive" parent="." groups=["npcs"] instance=ExtResource("2_rlhik")]
transform = Transform3D(1, 0, -2.13163e-14, 0, 1, 0, 2.13163e-14, 0, 1, 3.3, 0.5, 12)

[node name="AskedQuestion" parent="." instance=ExtResource("3_holyq")]
visible = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="Dialog" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fgfqk")
script = ExtResource("4_ccfle")
metadata/_edit_use_anchors_ = true

[node name="Box" type="Panel" parent="UI/Dialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Dialog"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.044
anchor_bottom = 0.987
offset_left = 44.0
offset_top = 15.784
offset_right = -125.688
offset_bottom = -26.1948
theme = ExtResource("5_4gwvo")

[node name="Speaker" type="Label" parent="UI/Dialog/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_4gwvo")
text = "Clive:"

[node name="DialogText" type="RichTextLabel" parent="UI/Dialog/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_4gwvo")
bbcode_enabled = true
text = "Hi there!"
fit_content = true

[node name="MusicalMusic" parent="." instance=ExtResource("7_holyq")]

[connection signal="playerGotTickets" from="Player" to="." method="_on_player_player_got_tickets"]
[connection signal="finishedSpeaking" from="Clive" to="." method="_on_clive_finished_speaking"]
[connection signal="lookingAtClive" from="Clive" to="." method="_on_clive_looking_at_clive"]
